# picflip

./: .gitignore  LICENSE  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build-macos.yml  build-windows.yml  validate-source.yml
scripts/: audit-binary-privacy.mjs  build-ffmpeg-macos.sh  build-ffmpeg-windows.sh  pdf-smoke.mjs  picflip-pkg-config.sh  prepare-sidecar.mjs  run-tauri.mjs  sanitize-binary-paths.mjs  security-scan.mjs
src/: App.tsx  i18n.ts  pdfTools.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.txt  THIRD_PARTY_NOTICES.md
src-tauri/src/: converter.rs  lib.rs  main.rs
